k8s/00-namespace.yaml
###############################################################################
# k8s/00-namespace.yaml
###############################################################################
apiVersion: v1
kind: Namespace
metadata:
  name: college-mgmt
  labels:
    app.kubernetes.io/managed-by: kustomize
    environment: production
